actions-runner-system/networking.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actions-runner-controller
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts:
        - arc.k8s.axatol.xyz
      secretName: actions-runner-controller-tls
  rules:
    - host: arc.k8s.axatol.xyz
      http:
        paths:
          - pathType: Exact
            path: /webhook
            backend:
              service:
                name: actions-runner-controller-github-webhook-server
                port:
                  name: http
